Use jpackage to create an OS specific executable so the commandline is not needed to start the app